load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/function/*.hpp",
]

cc_library(
    name = "function_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//libs/bind",
    ],
)

cc_library(
    name = "function",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":function_internal",
        "@boost//libs/integer",
        "@boost//libs/type_index",
    ],
)
